--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.12",
+    "pocketbase": "^0.21.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
