--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -17,6 +18,7 @@
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.12",
+    "next-themes": "^0.3.0",
     "pocketbase": "^0.21.5",
     "react": "^18",
     "react-dom": "^18",
