--- a/CyberInv-app/package.json
+++ b/CyberInv-app/package.json
@@ -33,6 +33,7 @@
     "pocketbase": "^0.21.5",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.232",
