--- a/static-components/package.json
+++ b/static-components/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
     "react": "^18.3.1",
+    "react-config": "^2.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1"
   },
@@ -28,6 +30,6 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.4.10"
   }
 }
