--- a/cyber-invitational/package.json
+++ b/cyber-invitational/package.json
@@ -6,22 +6,34 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "create-volume": "docker volume create cyber-inv-db",
+        "create-db": "docker pull postgres && docker run --name cyber-invitational-db --env POSTGRES_PASSWORD=secretpassword --volume cyber-inv-db:/var/lib/postgresql/data --publish 5432:5432 -d postgres",
+        "restart-db": "docker restart cyber-invitational-db",
+        "rm-db": "docker rm cyber-invitational-db"
     },
     "dependencies": {
+        "@prisma/client": "^5.21.1",
+        "argon2": "^0.41.1",
+        "jose": "^5.9.6",
+        "next": "15.0.2",
         "react": "19.0.0-rc-02c0e824-20241028",
         "react-dom": "19.0.0-rc-02c0e824-20241028",
-        "next": "15.0.2"
+        "zod": "^3.23.8"
     },
     "devDependencies": {
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
         "eslint": "^8",
-        "eslint-config-next": "15.0.2"
+        "eslint-config-next": "15.0.2",
+        "postcss": "^8",
+        "prettier": "^3.3.3",
+        "prettier-plugin-prisma": "^5.0.0",
+        "prettier-plugin-tailwindcss": "^0.6.8",
+        "prisma": "^5.21.1",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     },
     "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
