--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "rm-db": "docker rm cyber-invitational-db"
     },
     "dependencies": {
-        "@prisma/client": "^5.21.1",
+        "@prisma/client": "^5.22.0",
         "@radix-ui/react-accordion": "^1.2.1",
         "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.2",
@@ -23,17 +23,20 @@
         "@radix-ui/react-menubar": "^1.1.2",
         "@radix-ui/react-popover": "^1.1.2",
         "@radix-ui/react-progress": "^1.1.0",
-        "@radix-ui/react-scroll-area": "^1.2.0",
+        "@radix-ui/react-scroll-area": "^1.2.1",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.1",
         "@radix-ui/react-toggle": "^1.1.0",
-        "@radix-ui/react-tooltip": "^1.1.3",
+        "@radix-ui/react-tooltip": "^1.1.4",
+        "@tsparticles/engine": "^3.5.0",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.5.0",
         "argon2": "^0.41.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "embla-carousel-react": "^8.3.1",
-        "framer-motion": "^11.11.11",
+        "framer-motion": "^11.11.15",
         "jose": "^5.9.6",
         "lucide-react": "^0.454.0",
         "next": "15.0.2",
@@ -48,18 +51,18 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^9",
+        "@types/node": "^20.17.6",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "eslint": "^9.14.0",
         "eslint-config-next": "15.0.2",
-        "postcss": "^8",
+        "postcss": "^8.4.49",
         "prettier": "^3.3.3",
         "prettier-plugin-prisma": "^5.0.0",
         "prettier-plugin-tailwindcss": "^0.6.8",
-        "prisma": "^5.21.1",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "prisma": "^5.22.0",
+        "tailwindcss": "^3.4.14",
+        "typescript": "^5.6.3"
     },
     "overrides": {
         "react-is": "19.0.0-rc-02c0e824-20241028"
