--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-countdown": "^2.3.6",
         "react-dom": "19.0.0-rc-02c0e824-20241028",
         "react-icons": "^5.3.0",
+        "react-parallax-tilt": "^1.7.254",
         "react-resizable-panels": "^2.1.6",
         "recharts": "^2.13.3",
         "tailwind-merge": "^2.5.4",
