--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@radix-ui/react-tabs": "^1.1.1",
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.4",
+        "@tanstack/react-table": "^8.20.5",
         "@tsparticles/engine": "^3.5.0",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.5.0",
@@ -37,6 +38,7 @@
         "clsx": "^2.1.1",
         "embla-carousel-react": "^8.3.1",
         "framer-motion": "^11.11.15",
+        "heroicons": "^2.1.5",
         "jose": "^5.9.6",
         "lucide-react": "^0.454.0",
         "next": "15.0.2",
