--- a/package.json
+++ b/package.json
@@ -33,24 +33,28 @@
         "@tsparticles/engine": "^3.5.0",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.5.0",
+        "add": "^2.0.6",
         "argon2": "^0.41.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "drawer": "^0.0.2",
         "embla-carousel-react": "^8.3.1",
         "framer-motion": "^11.11.15",
         "heroicons": "^2.1.5",
         "jose": "^5.9.6",
         "lucide-react": "^0.454.0",
         "next": "15.0.2",
-        "react": "19.0.0-rc-02c0e824-20241028",
+        "react": "^18.2.0",
         "react-countdown": "^2.3.6",
-        "react-dom": "19.0.0-rc-02c0e824-20241028",
+        "react-dom": "^18.2.0",
         "react-icons": "^5.3.0",
         "react-parallax-tilt": "^1.7.254",
         "react-resizable-panels": "^2.1.6",
         "recharts": "^2.13.3",
+        "shadcn": "^2.1.6",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
+        "vaul": "^1.1.1",
         "zod": "^3.23.8"
     },
     "devDependencies": {
