--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "rm-db": "docker rm cyber-invitational-db"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@prisma/client": "^5.22.0",
         "@radix-ui/react-accordion": "^1.2.1",
         "@radix-ui/react-avatar": "^1.1.1",
