--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "jose": "^5.9.6",
         "lucide-react": "^0.454.0",
         "next": "15.0.2",
+        "next-themes": "^0.4.3",
         "react": "^18.2.0",
         "react-countdown": "^2.3.6",
         "react-dom": "^18.2.0",
