--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "rm-db": "docker rm cyber-invitational-db"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@prisma/client": "^5.21.1",
         "@radix-ui/react-accordion": "^1.2.1",
         "@radix-ui/react-avatar": "^1.1.1",
@@ -29,6 +30,7 @@
         "@radix-ui/react-tabs": "^1.1.1",
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.3",
+        "@tanstack/react-table": "^8.20.5",
         "argon2": "^0.41.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
