--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
         "@radix-ui/react-tabs": "^1.1.1",
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.3",
+        "@tsparticles/engine": "^3.7.1",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.7.1",
         "argon2": "^0.41.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -41,6 +44,7 @@
         "react-countdown": "^2.3.6",
         "react-dom": "19.0.0-rc-02c0e824-20241028",
         "react-icons": "^5.3.0",
+        "react-parallax-tilt": "^1.7.258",
         "react-resizable-panels": "^2.1.6",
         "recharts": "^2.13.3",
         "tailwind-merge": "^2.5.4",
