--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-hover-card": "^1.1.2",
         "@radix-ui/react-icons": "^1.3.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-menubar": "^1.1.2",
@@ -46,6 +47,7 @@
         "jose": "^5.9.6",
         "lucide-react": "^0.454.0",
         "next": "15.0.2",
+        "next-themes": "^0.4.3",
         "react": "^18.2.0",
         "react-countdown": "^2.3.6",
         "react-dom": "^18.2.0",
