--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "@hookform/resolvers": "^3.9.1",
         "@prisma/client": "^5.22.0",
         "@radix-ui/react-accordion": "^1.2.1",
         "@radix-ui/react-avatar": "^1.1.1",
@@ -26,6 +27,7 @@
         "@radix-ui/react-popover": "^1.1.2",
         "@radix-ui/react-progress": "^1.1.0",
         "@radix-ui/react-scroll-area": "^1.2.1",
+        "@radix-ui/react-select": "^2.1.4",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slider": "^1.2.1",
         "@radix-ui/react-slot": "^1.1.0",
@@ -51,6 +53,7 @@
         "react": "^18.2.0",
         "react-countdown": "^2.3.6",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.54.2",
         "react-icons": "^5.3.0",
         "react-parallax-tilt": "^1.7.254",
         "react-resizable-panels": "^2.1.6",
