--- a/package.json
+++ b/package.json
@@ -14,71 +14,72 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
-        "@hookform/resolvers": "^3.9.1",
+        "@hookform/resolvers": "^3.10.0",
         "@prisma/client": "^5.22.0",
-        "@radix-ui/react-accordion": "^1.2.1",
-        "@radix-ui/react-avatar": "^1.1.1",
-        "@radix-ui/react-dialog": "^1.1.2",
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
-        "@radix-ui/react-hover-card": "^1.1.2",
-        "@radix-ui/react-icons": "^1.3.1",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-menubar": "^1.1.2",
-        "@radix-ui/react-popover": "^1.1.2",
-        "@radix-ui/react-progress": "^1.1.0",
-        "@radix-ui/react-scroll-area": "^1.2.1",
-        "@radix-ui/react-select": "^2.1.4",
-        "@radix-ui/react-separator": "^1.1.0",
-        "@radix-ui/react-slider": "^1.2.1",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-tabs": "^1.1.1",
-        "@radix-ui/react-toggle": "^1.1.0",
-        "@radix-ui/react-tooltip": "^1.1.4",
-        "@tanstack/react-table": "^8.20.5",
-        "@tsparticles/engine": "^3.5.0",
+        "@radix-ui/react-accordion": "^1.2.2",
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.5",
+        "@radix-ui/react-dropdown-menu": "^2.1.5",
+        "@radix-ui/react-hover-card": "^1.1.5",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-menubar": "^1.1.5",
+        "@radix-ui/react-popover": "^1.1.5",
+        "@radix-ui/react-progress": "^1.1.1",
+        "@radix-ui/react-scroll-area": "^1.2.2",
+        "@radix-ui/react-select": "^2.1.5",
+        "@radix-ui/react-separator": "^1.1.1",
+        "@radix-ui/react-slider": "^1.2.2",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tabs": "^1.1.2",
+        "@radix-ui/react-toggle": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.7",
+        "@tanstack/react-table": "^8.20.6",
+        "@tsparticles/engine": "^3.8.0",
         "@tsparticles/react": "^3.0.0",
-        "@tsparticles/slim": "^3.5.0",
+        "@tsparticles/slim": "^3.8.0",
         "add": "^2.0.6",
         "argon2": "^0.41.1",
-        "class-variance-authority": "^0.7.0",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "daisyui": "^4.12.23",
         "drawer": "^0.0.2",
         "embla-carousel-autoplay": "^8.5.2",
-        "embla-carousel-react": "^8.3.1",
-        "framer-motion": "^11.11.15",
-        "heroicons": "^2.1.5",
+        "embla-carousel-react": "^8.5.2",
+        "framer-motion": "^11.18.2",
+        "heroicons": "^2.2.0",
         "jose": "^5.9.6",
         "lucide-react": "^0.454.0",
         "next": "15.0.2",
-        "next-themes": "^0.4.3",
-        "react": "^18.2.0",
+        "next-themes": "^0.4.4",
+        "pocketbase": "^0.25.1",
+        "react": "^18.3.1",
         "react-countdown": "^2.3.6",
-        "react-dom": "^18.2.0",
+        "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.2",
-        "react-icons": "^5.3.0",
-        "react-parallax-tilt": "^1.7.254",
-        "react-resizable-panels": "^2.1.6",
-        "recharts": "^2.13.3",
-        "shadcn": "^2.1.6",
-        "tailwind-merge": "^2.5.4",
+        "react-icons": "^5.4.0",
+        "react-parallax-tilt": "^1.7.274",
+        "react-resizable-panels": "^2.1.7",
+        "recharts": "^2.15.0",
+        "shadcn": "^2.1.8",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
-        "vaul": "^1.1.1",
-        "zod": "^3.23.8"
+        "vaul": "^1.1.2",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
-        "@types/node": "^20.17.6",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
-        "eslint": "^9.14.0",
+        "@types/node": "^20.17.16",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "eslint": "^9.18.0",
         "eslint-config-next": "15.0.2",
-        "postcss": "^8.4.49",
-        "prettier": "^3.3.3",
+        "postcss": "^8.5.1",
+        "prettier": "^3.4.2",
         "prettier-plugin-prisma": "^5.0.0",
-        "prettier-plugin-tailwindcss": "^0.6.8",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "prisma": "^5.22.0",
-        "tailwindcss": "^3.4.14",
-        "typescript": "^5.6.3"
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.7.3"
     },
     "overrides": {
         "react-is": "19.0.0-rc-02c0e824-20241028"
