--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "create-volume": "docker volume create cyber-inv-db",
         "create-db": "docker pull postgres && docker run --name cyber-invitational-db --env POSTGRES_PASSWORD=secretpassword --volume cyber-inv-db:/var/lib/postgresql/data --publish 5432:5432 -d postgres",
         "restart-db": "docker restart cyber-invitational-db",
-        "rm-db": "docker rm cyber-invitational-db"
+        "rm-db": "docker rm cyber-invitational-db",
+        "email": "email dev"
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
@@ -34,6 +35,7 @@
         "@radix-ui/react-tabs": "^1.1.2",
         "@radix-ui/react-toggle": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.7",
+        "@react-email/components": "0.0.32",
         "@tanstack/react-table": "^8.20.6",
         "@tsparticles/engine": "^3.8.0",
         "@tsparticles/react": "^3.0.0",
@@ -78,6 +80,7 @@
         "prettier-plugin-prisma": "^5.0.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "prisma": "^5.22.0",
+        "react-email": "3.0.6",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.7.3"
     },
